glibc (2.3.6-7) UNRELEASED; urgency=low

  * 

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 10 Apr 2006 06:40:33 +0200

glibc (2.3.6-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * Remove the timezone database from the libc6 package. It is not provided
    by a separate package called tzdata.
  * Split out binaries from libc6 into libc-bin, and binaries from libc6-bin
    into libc-bin-dev.  (Closes: #330735)
  * Remove old /usr/share/doc/libc* directories in preinst, so they can be
    replaced by symlinks by dpkg.
  * Put each test log file in the corresponding package instead of putting all
    of them in libc6.
  * Remove sparc/local-sparc64-fixups.diff as /lib64 and /usr/lib64 are now a
    default search path on 32/64-bit architectures.
  * Switch minimum kernel to at least 2.4.0 on all arches but m68k, and change
    kernelcheck.sh accordingly. Affected architectures:
    - alpha: from 2.2.0 to 2.4.0
    - arm: from 2.2.0 to 2.4.0 (but 2.4.0 was checked at installed time)
    - i386: from 2.2.0 to 2.4.0
    - powerpc: from 2.2.0 to 2.4.0
    - s390: from 2.2.10 to 2.4.0
    - sparc: from 2.2.0 to 2.4.0
    (Closes: #174270, #220992)
  * Add i386/local-i486_ldt_support.diff (add ldt support and thus TLS support
    on i486 machines). Thanks to Petr Salinger for the hint.  (Closes: #226716)
  * Bump shlib to (>= 2.3.6-6) on i386.
  * debian/debhelper.in/libc-alt.install: Add gconv-modules to the bi-arch
    packages.  (Closes: #361642)
  * /etc/ld.so.nohwcap is now supported on non-Linux architectures. Drop the
    "Linux" check from libc-otherbuild.preinst.

  [ Denis Barbier ]
  * debian/debhelper.in/locales.config: /etc/locale.gen was not generated at
    initial installation.  (Closes: #357523)
  * update-locale: Fix buggy sanity check between LANGUAGE and LANG.
    (Closes: #361091)
  * update-locale: Drop the --remove flag, it is useless.
  * update-locale: Fix the --locale-file flag.