@@ -552,6 +552,20 @@ Description: GNU C Library: Shared libraries [i686 optimized]
  Most notably, IBM's JDK. If you experience problems with such
  applications, you will need to remove this package.
 
+Package: libc6-xen
+Architecture: i386
+Conflicts: libc6-i686
+Section: libs
+Priority: extra
+Pre-Depends: libc6 (= ${Source-Version})
+Description: GNU C Library: Shared libraries [Xen version]
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C
+ library and the standard math library, as well as many others.
+ .
+ This set of libraries are optimized for the Xen hypervisor, and will be
+ selected instead when running under Xen.
+
 Package: libc0.1-i686
 Architecture: kfreebsd-i386
 Section: libs
