@@ -1,6 +1,7 @@
 glibc (2.3.6-7) UNRELEASED; urgency=low
 
-  * 
+  [ Aurelien Jarno ]
+  * Build a libc6-xen flavour on i386.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 10 Apr 2006 06:40:33 +0200
 
